@@ -1,2 +1,2 @@
-cascading.release.version=1.0.14
+cascading.release.version=1.0.15-dev
 cascading.hadoop.compatible.version=hadoop-0.19.0+
